--- a/package.json
+++ b/package.json
@@ -1,20 +1,27 @@
 {
   "version": "0.0.0",
   "scripts": {
-    "start": "node ./config/cli.js"
+    "start": "node ./config/runDemo.js",
+    "test": "node ./config/runTest.js"
   },
   "dependencies": {
     "react": "^17.0.0",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@types/jest": "^26.0.23",
     "@types/react": "^17.0.0",
     "@types/react-dom": "17.0.2",
     "@vitejs/plugin-react-refresh": "^1.3.1",
+    "arg": "^5.0.0",
+    "babel-jest": "^27.0.6",
+    "chalk": "^4.1.1",
     "fast-glob": "^3.2.6",
     "inquirer": "^8.1.1",
+    "jest": "^27.0.6",
     "rimraf": "^3.0.2",
+    "ts-jest": "^27.0.3",
     "typescript": "^4.3.2",
-    "vite": "^2.3.8"
+    "vite": "2.3.8"
   }
 }
