--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
     "@types/react-dom": "17.0.2",
     "@vitejs/plugin-react-refresh": "^1.3.1",
     "arg": "^5.0.0",
-    "babel-jest": "^27.0.6",
+    "babel-jest": "27.0.6",
     "chalk": "^4.1.1",
     "fast-glob": "^3.2.6",
     "inquirer": "^8.1.1",
-    "jest": "^27.0.6",
+    "jest": "27.0.6",
+    "jest-cli": "27.0.6",
     "rimraf": "^3.0.2",
     "ts-jest": "^27.0.3",
     "typescript": "^4.3.2",
