--- a/package.json
+++ b/package.json
@@ -1,33 +1,21 @@
 {
   "version": "0.0.0",
-  "name": "react53",
-  "bin": {
-    "react53": "bin/cli.js"
+  "name": "react53-repo",
+  "workspaces": [
+    "packages/cli",
+    "packages/template"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/BetaSu/react53.git"
   },
-  "workspaces": ["workspace-template", "workspace-cli"],
-  "scripts": {
-    "start": "node ./config/runDemo.js",
-    "test": "node ./config/runTest.js"
+  "author": "KaSong",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/BetaSu/react53/issues"
   },
+  "homepage": "https://github.com/BetaSu/react53#readme",
   "dependencies": {
-    "react": "^17.0.0",
-    "react-dom": "17.0.2"
-  },
-  "devDependencies": {
-    "@types/jest": "^26.0.23",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "17.0.2",
-    "@vitejs/plugin-react-refresh": "^1.3.1",
-    "arg": "^5.0.0",
-    "babel-jest": "27.0.6",
-    "chalk": "^4.1.1",
-    "fast-glob": "^3.2.6",
-    "inquirer": "^8.1.1",
-    "jest": "27.0.6",
-    "jest-cli": "27.0.6",
-    "rimraf": "^3.0.2",
-    "ts-jest": "^27.0.3",
-    "typescript": "^4.3.2",
-    "vite": "2.3.8"
+    "react53-template": "file:packages/template"
   }
 }
