--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
-  "version": "0.0.0",
-  "name": "react53-repo",
-  "workspaces": [
-    "packages/cli",
-    "packages/template"
-  ],
+  "name": "react53",
+  "version": "1.0.0",
+  "description": "React53 CLI",
+  "main": "index.js",
+  "bin": {
+    "react53": "./bin/cli.js"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/BetaSu/react53.git"
@@ -15,7 +19,9 @@
     "url": "https://github.com/BetaSu/react53/issues"
   },
   "homepage": "https://github.com/BetaSu/react53#readme",
-  "dependencies": {
-    "react53-template": "file:packages/template"
+  "devDependencies": {
+    "chalk": "^4.1.1",
+    "inquirer": "^8.1.1",
+    "ora": "^5.4.1"
   }
 }
