--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react53",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "React53 CLI",
   "main": "index.js",
   "bin": {
@@ -19,7 +19,7 @@
     "url": "https://github.com/BetaSu/react53/issues"
   },
   "homepage": "https://github.com/BetaSu/react53#readme",
-  "devDependencies": {
+  "dependencies": {
     "chalk": "^4.1.1",
     "inquirer": "^8.1.1",
     "ora": "^5.4.1"
